test_suite/tests/compile_fail/tuple_struct_empty.rs
use ronky::Exported;

#[derive(Exported)]
struct Empty();

fn main() {}
