test_suite/tests/compile_fail/tuple_struct_empty.stderr
error: Empty tuple structs are not exportable
 --> tests/compile_fail/tuple_struct_empty.rs:4:1
  |
4 | struct Empty();
  | ^^^^^^
